<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Herbeluister</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_menu_shows_title">RADIO SHOWS</string>
    <string name="main_menu_other_title">ANDERE OPTIES</string>
    <string name="download_title">Downloads</string>
    <string name="radio_title">Radio</string>
    
    <string name="title_show_overview">Programma overzicht</string>
    <string name="download_subdir">Herbeluister</string>
    <string name="download_subdir_test">StuBruHerbeluister</string>
    <string name="stubru_subdir">StuBru</string>
    <string name="mnm_subdir">MNM</string>
    <string name="radio1_subdir">Radio_1</string>
    <string name="radio2_subdir">Radio_2</string>
    
    <string name="show_name">Naam programma: </string>
    <string name="show_description">Beschrijving: </string>
    <string name="show_scheduling">Uren: </string>
    <string name="show_contents">Inhoud: </string>
    <string name="show_presenter">Presentatoren: </string>
    <string name="show_email">Email: </string>
    <string name="show_weblink">Webpagina: </string>
    
    <string name="stream_label">Stream</string>
    <string name="download_label">Download</string>
    <string name="radio_label">Radio</string>
    <string name="update_label">Update</string>
    

    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="title_bar_slide">Sliding Title Bar</string>

</resources>