<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/details_scroll_linear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars = "vertical"
        android:layout_above="@+id/detail_download_layout">		
        <LinearLayout    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" 
            >


            <TextView
             	android:id="@+id/text_name"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textStyle="bold"
		        android:paddingBottom="16dp"
		         
                />
            
            <TextView 
                android:id="@+id/text_description_title"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:text="@string/show_description"
		        android:textStyle="bold"         
                />
            <TextView
             	android:id="@+id/text_description_content"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ellipsize="none"
		        android:maxLines="100"
		        android:singleLine="false"
		        android:scrollHorizontally="false"
		        android:paddingBottom="16dp"
                />

            
            <TextView 
                android:id="@+id/text_scheduling_title"
                android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"
		        android:text="@string/show_scheduling"
		        android:textStyle="bold"         
                />
            <TextView
             	android:id="@+id/text_scheduling_content"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ellipsize="none"
		        android:maxLines="100"
		        android:singleLine="false"
		        android:scrollHorizontally="false"
                android:paddingBottom="16dp"
                />

   	        <TextView 
                android:id="@+id/text_contents_title"	
                android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"
		        android:text="@string/show_contents"
		        android:textStyle="bold"         
                />
            <TextView
             	android:id="@+id/text_contents_content"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ellipsize="none"
		        android:maxLines="100"
		        android:singleLine="false"
		        android:scrollHorizontally="false"
                android:paddingBottom="16dp"
                />

            
          	<TextView 
                android:id="@+id/text_presenter_title"	
                android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"
		        android:text="@string/show_presenter"
		        android:textStyle="bold"         
                />
            <TextView
             	android:id="@+id/text_presenter_content"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ellipsize="none"
		        android:maxLines="100"
		        android:singleLine="false"
		        android:scrollHorizontally="false"
		        android:paddingBottom="16dp"
                />

            
          	<TextView 
                android:id="@+id/text_email_title"	
                android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"
		        android:text="@string/show_email" 
		        android:textStyle="bold"        
                />
            <TextView
             	android:id="@+id/text_email_content"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ellipsize="none"
		        android:maxLines="100"
		        android:singleLine="false"
		        android:scrollHorizontally="false"
		        android:paddingBottom="16dp"
                />

            
          	<TextView 
                android:id="@+id/text_weblink_title"	
                android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"
		        android:text="@string/show_weblink"
		        android:textStyle="bold"         
                />
            <TextView
             	android:id="@+id/text_weblink_content"	
                android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ellipsize="none"
		        android:maxLines="100"
		        android:singleLine="false"
		        android:scrollHorizontally="false"
		        android:paddingBottom="16dp"
                />
    	</LinearLayout>
    </ScrollView>

</RelativeLayout>